ya esta completo el CRUD de usuarios, ahora vamos con modificacion y avatar, luego con video y documentacion y terminamos

--- a/appinfo/templates/index.html
+++ b/appinfo/templates/index.html
@@ -49,7 +49,15 @@
                 <p>Muestra una lista de usuarios creados</p>
             </td>
             </td>
-        </tr>  
+        </tr> 
+        <tr>
+            <td>
+                <a href="{% url 'list_delete_users' %}" style="color: maroon;" class="link-maroon">Eliminar usuarios</a>
+            <td>
+                <p>Pagina en la cual podras eliminar usuarios</p>
+            </td>
+            </td>
+        </tr>   
         <tr>
             <td>
                 <a href="{% url 'login' %}" style="color: maroon;" class="link-maroon">Login</a>
