--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -10934,8 +10934,33 @@ textarea.form-control-lg {
   text-decoration: underline;
 }
 
+/* CSS styles para unauthlog.html */
+.login-message-container {
+  text-align: center;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+}
 
+.login-button {
+  background-color: #0d6efd;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+}
 
+.login-button:hover {
+  background-color: #0b5fd7;
+}
 
-
-
+.login-link {
+  color: white;
+  text-decoration: none;
+}
