--- a/appregister/templates/loginsuccess.html
+++ b/appregister/templates/loginsuccess.html
@@ -4,9 +4,9 @@
 {% block variable1 %}
 
 <div>
-    {% if msg == "0" %}
+    {% if msg != "1" %}
 
-        <h2>La autenticacion fallo, parece que los datos son incorrectos. seras redireccionado de nuevo al formulario de loguin en instantes</h2>
+        <h3>La autenticacion fallo, parece que los datos son incorrectos o no coinciden con ningun usuario en las bases. seras redireccionado de nuevo al formulario de loguin en instantes</h3>
 
     {% else %}
 
@@ -15,7 +15,7 @@
     {% endif %}
 </div>
 
-    {% if msg == 1 %}
+    {% if msg == "1" %}
 
     <script>
         setTimeout(function() {
