listo el cambio de datos de perfil, y el de contraseña pero con un built in de django. GPT y stackoverflow ayudaron muchisimo esta vez. ahora el avatar y creo q estariamos listos para la docu

--- a/appregister/templates/updateuser.html
+++ b/appregister/templates/updateuser.html
@@ -6,7 +6,8 @@
     <form action="{% url 'update_user' %}" method="post">
         {% csrf_token %}
 
-        {{instance.as_p}}
+        {{instance1.as_p}}
+        {{instance2.as_p}}
 
         <button type="submit"> Guardar cambios </button>
     </form>
