--- a/appinfo/templates/index.html
+++ b/appinfo/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block variable1 %}
 
-<h3 style="color:midnightblue">index cat 1</h3>
+<h3 style="color:midnightblue">Indice</h3>
 <ul>
     <table class="custom-table">
         <style>
