proyecto terminado, ya se puede actualizar la imagen del Avatar de User sin eliminar avatar, si no modificar su field. (toy re cansao, se supone que estoy de vacaciones), ahora hay q hacer el video, el unit test y el readme

--- a/appregister/templates/updateuser.html
+++ b/appregister/templates/updateuser.html
@@ -9,6 +9,10 @@
         {{instance1.as_p}}
         {{instance2.as_p}}
 
+        <button>
+            <a href="{% url 'agg_avatar' %}" style="align-items: center;">Modificar avatar</a>
+        </button>
+
         <button type="submit"> Guardar cambios </button>
     </form>
 
